--- a/portfolio.html
+++ b/portfolio.html
@@ -73,12 +73,19 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/app-1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/app-1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Banking App Interface Concept</h2>
                   <p class="secondary-text portfolio-text">App</p>
@@ -88,12 +95,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/marketing-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/marketing-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Cashless Payment Marketing</h2>
                   <p class="secondary-text portfolio-text">Marketing</p>
@@ -103,12 +117,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/app-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/app-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Meditation App</h2>
                   <p class="secondary-text portfolio-text">App</p>
@@ -118,12 +139,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/marketing-4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/marketing-4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Taxi Service</h2>
                   <p class="secondary-text portfolio-text">Marketing</p>
@@ -133,12 +161,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/design-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/design-5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Screen Illustrations</h2>
                   <p class="secondary-text portfolio-text">Design</p>
@@ -148,12 +183,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/marketing-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/marketing-6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Online Courses</h2>
                   <p class="secondary-text portfolio-text">Marketing</p>
@@ -163,12 +205,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/design-7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/design-7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Instagram Stories Concept</h2>
                   <p class="secondary-text portfolio-text">Design</p>
@@ -178,12 +227,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/website-8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/website-8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Organic Food</h2>
                   <p class="secondary-text portfolio-text">Web Site</p>
@@ -193,12 +249,19 @@
 
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/images-portfolio/website-9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="portfolio-list-img-wrapper">
+                  <img
+                    src="./images/images-portfolio/website-9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-img-text">
                   <h2 class="third-title">Fresh Coffee</h2>
                   <p class="secondary-text portfolio-text">Web Site</p>
